# Kursova

./: CMakeLists.txt  ExprLib.cpp  ExprLib.h  Expression.cpp  Expression.h  ExpressionCalculator.cpp  ExpressionCalculator.h  Graph.cpp  Graph.h  Plotter.cpp  Plotter.h  RobotoMono_font.cpp  RobotoMono_font.h  Roboto_font.cpp  Roboto_font.h  func_tests.cpp  main.cpp
